menambahkan CSS di dalam projek

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PT. KELUARGA SOMAT</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="container">
         <div class="header">
-            <img src="../WAN/img/logo.png" alt="Gambar" height="100" width="100">
+            <img src="../WAN/img/logo.png" alt="Gambar">
 
             <ul class="menu-utama">
                 <li><a href="">Home</a></li>
